# ai_story

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_EN.md  dev.md  docker-compose-deploy.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .dockerignore  API_STAGE_RESPONSE_FORMAT.md  CODE_REVIEW_REPORT.md  GLOBAL_VARIABLES.md  MOCK_API_GUIDE.md  README.md  REFACTOR_FLOW_DATA_STORAGE.md  REMOVE_INPUT_OUTPUT_DATA_DEPENDENCY.md  STAGE_API_ENHANCEMENT.md  cli.py  test_mock_api.py  verify_data_flow.py
backend/apps/agent/: urls.py  views.py
backend/apps/ai_proxy/: urls.py  views.py
backend/apps/content/: admin.py  models.py
backend/apps/mock_api/: __init__.py  apps.py  urls.py  views.py
backend/apps/models/: models.py  serializers.py  services.py  vendor_catalog.py  views.py
backend/apps/projects/: admin.py  asset_context.py  models.py  queue_service.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/apps/prompts/: admin.py  debug_services.py  (+6 more)
backend/config/: asgi.py  urls.py
backend/docs/: CLOSED_SOURCE_APPS.md  MULTI_GRID_IMAGE_WORKFLOW_PLAN.md
backend/workflows/: README.md  z_image_t2i_lora_style.json
docker/: Dockerfile  backend-entrypoint.sh  frontend.Dockerfile
docker/nginx/: frontend.conf
frontend/: CANVAS_EXECUTION_GUIDE.md  CANVAS_FEATURE.md  CANVAS_FEATURE_V2.md  DOMAIN_DATA_VIEWER.md  GLOBAL_VARIABLES_GUIDE.md  README.md  STREAMING_REWRITE_GUIDE.md  package.json  tailwind.config.js
frontend/config/: webpack.common.js
frontend/src/: App.vue  main.js  output.css
(+117 files in other folders)
